dfir_rs/tests/compile-fail-stable/surface_degenerate_null.stderr
error: Degenerate subgraph detected, is there a disconnected `null()` or other degenerate pipeline somewhere?
 --> tests/compile-fail-stable/surface_degenerate_null.rs:6:9
  |
6 |         null();
  |         ^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_degenerate_null.rs:8:8
  |
8 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
